<resources>
    <string name="app_name">LuasKeliling</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="persegi">PERSEGI</string>
    <string name="segitiga">SEGITIGA</string>
    <string name="lebar">Masukan Lebar</string>
    <string name="panjang">Masukan Panjang</string>
    <string name="hitung">HITUNG</string>
    <string name="hasil">Hasil</string>
    <string name="about">About</string>
    <string name="namaku">Dody Rifki Suraya</string>
    <string name="emailku">dodyrifkisuraya@gmail.com</string>
    <string name="share">SHARE</string>
</resources>
