<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".SegitigaFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_alas"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:hint="@string/lebar"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_tinggi" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/et_alas" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/panjang"/>
    <Button
            android:text="@string/hitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_hitung" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_alas"
            app:layout_constraintStart_toStartOf="@+id/et_alas"
    />
    <TextView
            tools:text="@string/hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_hasil" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_hitung" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="20sp"/>
    <Button
            android:text="@string/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_share" app:layout_constraintEnd_toEndOf="@+id/et_alas" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_alas"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>